<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/message"
        android:background="@drawable/ui_white_r10"
        android:backgroundTint="@color/background_image"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/tell_us_why"
        android:textColor="@color/back"
        android:padding="10dp"
        android:textSize="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button_wrong_color"
        android:layout_width="300dp"
        android:layout_margin="15dp"
        android:layout_height="100dp"
        android:text="@string/wrong_color"
        android:textSize="35dp"
        android:textAllCaps="false"
        android:background="@drawable/ui_grad_blue_r10_a0"
        app:layout_constraintEnd_toStartOf="@+id/button_flawed"
        app:layout_constraintBottom_toTopOf="@+id/button_dont_like" />

    <Button
        android:id="@+id/button_flawed"
        android:layout_width="300dp"
        android:layout_margin="15dp"
        android:layout_height="100dp"
        android:text="@string/flawed"
        android:textSize="35dp"
        android:background="@drawable/ui_grad_blue_r10_a0"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_dont_like" />

    <Button
        android:id="@+id/button_wrong_size"
        android:layout_width="300dp"
        android:layout_margin="15dp"
        android:layout_height="100dp"
        android:text="@string/wrong_size"
        android:textSize="35dp"
        android:background="@drawable/ui_grad_blue_r10_a0"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/button_flawed"
        app:layout_constraintBottom_toTopOf="@+id/button_dont_like" />

    <Button
        android:id="@+id/button_dont_need"
        android:layout_width="300dp"
        android:layout_margin="15dp"
        android:layout_height="100dp"
        android:text="@string/dont_need"
        android:textSize="35dp"
        android:background="@drawable/ui_grad_blue_r10_a0"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/button_dont_like"
        app:layout_constraintTop_toTopOf="@id/button_dont_like"
        app:layout_constraintEnd_toStartOf="@+id/button_dont_like" />

    <Button
        android:id="@+id/button_dont_like"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:text="@string/dont_like"
        android:textSize="35dp"
        android:textAllCaps="false"
        android:background="@drawable/ui_grad_blue_r10_a0"
        app:layout_constraintBottom_toTopOf="@id/button_home_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <Button
        android:id="@+id/button_dont_fit"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/ui_grad_blue_r10_a0"
        android:layout_margin="15dp"
        android:text="@string/dont_fit"
        android:textSize="35dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/button_dont_like"
        app:layout_constraintTop_toTopOf="@id/button_dont_like"
        app:layout_constraintStart_toEndOf="@+id/button_dont_like" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dont_like">

        <EditText
            android:id="@+id/EmailInput"
            android:layout_width="720dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/reasons"
            android:inputType="textEmailAddress"
            android:textSize="40sp" />

        <Button
            android:background="@drawable/ui_grad_blue_r10_a0"
            android:id="@+id/button_submit"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_back_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:textSize="30sp"
        android:text="@string/back"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/ic_back"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        />

    <Button
        android:id="@+id/button_home_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back_reason"
        android:layout_margin="15dp"
        android:textSize="30sp"
        android:text="@string/home"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        />

</android.support.constraint.ConstraintLayout>