<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ui_grad_blue_r0_a90"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/BannerEmail"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:padding="15dp"
        android:text="@string/TextEnterMail"
        android:textAllCaps="false"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/EmailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="@string/hintMail"
            android:textColorHint="@color/transparent_gray"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="35sp" />

        <Button
            android:id="@+id/ButtonConfirmMail"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/ButtonConfirm"
            android:background="@drawable/ui_white_r30"
            android:textColor="@color/back"
            android:textSize="35sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_back_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:textSize="30sp"
        android:text="@string/other"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/ic_back"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        />

    <Button
        android:id="@+id/button_home_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back_email"
        android:layout_margin="15dp"
        android:textSize="30sp"
        android:text="@string/home"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        />



</android.support.constraint.ConstraintLayout>