<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/frame_item"
        android:layout_height="340dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:background="@drawable/ui_grad_blue_r10_a0"/>

    <ImageView
        android:id="@+id/image_item"
        android:background="@drawable/ui_white_r10"
        android:layout_width="420dp"
        android:padding="10dp"
        android:layout_height="320dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/it_dress_man_grey" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:text="@string/price_old"
        app:layout_constraintStart_toEndOf="@+id/image_item"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:textSize="40sp" />

    <View
        android:id="@+id/line"
        android:layout_width="500dp"
        android:layout_height="5dp"
        android:background="@drawable/ui_grad_blue_r30_a0"
        app:layout_constraintStart_toEndOf="@+id/image_item"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:textSize="40sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/image_item"
        app:layout_constraintTop_toTopOf="@+id/frame_item"
        android:layout_margin="15dp"
        android:text="@string/item_name"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/text_rating"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_item"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ui_white_r10"
        android:backgroundTint="@color/background_image"
        android:text="@string/confirmReturn"
        android:textSize="35sp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_return"
        android:background="@drawable/ui_grad_blue_r30_a0"
        android:drawableEnd="@drawable/ic_forward_white"
        android:paddingEnd="10dp"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/yes"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_back_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:text="@string/back"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/ic_back"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

    <Button
        android:id="@+id/button_home_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back_selected"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:text="@string/home"
        android:textColor="@color/dark_gray"
        android:textAllCaps="false"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" />

</android.support.constraint.ConstraintLayout>