<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ui_grad_blue_r0_a90"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/white_box"
        android:layout_width="0dp"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="bottom|center_horizontal"
        android:textAlignment="gravity"
        android:textStyle="bold"
        android:layout_height="420dp"
        android:text="@string/scan"
        android:paddingBottom="15dp"
        android:textColor="@color/colorSpeechBarDraker"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/frame"
        app:layout_constraintStart_toStartOf="@id/frame"
        android:background="@drawable/ui_white_r10"
        />

    <com.example.retaildemo.Camera.CameraSourcePreview
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/camera_preview"
        android:layout_width="450dp"
        android:layout_height="325dp"
        android:layout_margin="20dp" />

    <View
        android:id="@+id/frame"
        android:layout_width="470dp"
        android:layout_height="340dp"
        app:layout_constraintTop_toTopOf="@id/camera_preview"
        app:layout_constraintBottom_toBottomOf="@id/camera_preview"
        app:layout_constraintStart_toStartOf="@id/camera_preview"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"
        android:background="@drawable/ui_outline_camera_white"
        />

    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        app:layout_constraintTop_toTopOf="@id/camera_preview"
        app:layout_constraintBottom_toBottomOf="@id/camera_preview"
        app:layout_constraintStart_toStartOf="@id/camera_preview"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"
        android:src="@drawable/ui_camera_overlay"/>




    <TextView
        android:id="@+id/context_text_order"
        android:textSize="30dp"
        android:layout_width="0dp"
        android:text="@string/textOrder"
        android:layout_margin="10dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/order_input"
        app:layout_constraintEnd_toEndOf="@id/order_input"
        app:layout_constraintBottom_toTopOf="@+id/order_input"
        android:drawableBottom="@drawable/ic_down"
        android:layout_height="wrap_content" />




    <EditText
        android:id="@+id/order_input"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/OrderNumber"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="@+id/white_box"
        app:layout_constraintBottom_toBottomOf="@+id/white_box"
        app:layout_constraintStart_toEndOf="@+id/white_box"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        app:layout_constraintStart_toStartOf="@id/order_input"
        app:layout_constraintEnd_toEndOf="@id/order_input"
        app:layout_constraintTop_toBottomOf="@id/order_input"
        android:background="@drawable/ui_white_r30"
        android:id="@+id/button_confirm_order"
        android:layout_width="150dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonConfirm"
        android:textColor="@color/colorSpeechBarDraker"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_home_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/ui_white_r30"
        android:backgroundTint="@color/light_gray"
        android:drawableStart="@drawable/ic_back"
        android:padding="10dp"
        android:textAllCaps="false"
        android:paddingEnd="20dp"
        android:paddingStart="10dp"
        android:text="@string/home"
        android:textColor="@color/dark_gray"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>